# Python_for_Data_Science

./: delete_pycache.py
Python_0_Starting/ex00/: Hello.py
Python_0_Starting/ex01/: format_ft_time.py
Python_0_Starting/ex02/: find_ft_type.py  tester.py
Python_0_Starting/ex03/: NULL_not_found.py  tester.py
Python_0_Starting/ex04/: whatis.py
Python_0_Starting/ex05/: building.py
Python_0_Starting/ex06/: filterstring.py  ft_filter.py
Python_0_Starting/ex07/: sos.py
Python_0_Starting/ex08/: Loading.py  tester.py
Python_0_Starting/ex09/: README.md  setup.py  tester.py
Python_0_Starting/ex09/ft_package/: README.md  pyproject.toml  setup.py  utils.py
Python_0_Starting/ex09/ft_package/ft_package/: utils.py
Python_1_Array/ex00/: give_bmi.py  tester.py
Python_1_Array/ex01/: array2D.py  tester.py
Python_1_Array/ex02/: load_image.py  tester.py
Python_1_Array/ex03/: zoom.py
Python_1_Array/ex04/: load_image.py  rotate.py
Python_1_Array/ex05/: load_image.py  pimp_image.py  tester.py
Python_2_DataTable/ex00/: tester.py
Python_2_DataTable/ex01/: aff_line.py  load_csv.py
Python_2_DataTable/ex02/: aff_pop.py  load_csv.py
Python_2_DataTable/ex03/: projection_life.py
Python_2_DataTable/resources/: error.txt
Python_3_OOP/ex00/: tester.py
Python_3_OOP/ex01/: S1E7.py  tester.py
Python_3_OOP/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
Python_3_OOP/ex03/: ft_calculator.py  tester.py
Python_3_OOP/ex04/: ft_calculator.py
Python_4_Dod/ex00/: statistics.py  tester.py
Python_4_Dod/ex01/: in_out.py  tester.py
Python_4_Dod/ex02/: callLimit.py
(+2 files in other folders)
